--- a/index1.html
+++ b/index1.html
@@ -27,7 +27,7 @@
         <textarea type="text" id="desc" placeholder="desc"></textarea>
         <br>
         <input type="checkbox" id="checkbox"> is Private
-        <button onclick="blogPost()">BLOG POST</button>
+        <button onclick="blogpost()">BLOG POST</button>
         </article>
 
         <article class="blog-post">
